fix: update swagger document
