# server/docs/swagger.json
@@ -37,14 +37,41 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handler.BaseHttpResponse"
+                                "allOf": [
+                                    {
+                                        "$ref": "#/definitions/handler.BaseHttpResponse"
+                                    },
+                                    {
+                                        "type": "object",
+                                        "properties": {
+                                            "data": {
+                                                "type": "array",
+                                                "items": {
+                                                    "$ref": "#/definitions/models.Leaderboard"
+                                                }
+                                            }
+                                        }
+                                    }
+                                ]
                             }
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.BaseHttpResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.BaseHttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -64,7 +91,7 @@
                 "parameters": [
                     {
                         "description": "Leaderboard Information (all required)",
-                        "name": "contest",
+                        "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -79,19 +106,90 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/handler.BaseHttpResponse"
-                        }
-                    },
-                    "406": {
-                        "description": "Not Acceptable",
-                        "schema": {
-                            "$ref": "#/definitions/handler.BaseHttpResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.BaseHttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/handler.BaseHttpResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.BaseHttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/seed": {
+            "get": {
+                "description": "Get Single play game seed",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Game SinglePlay Endpoints"
+                ],
+                "summary": "Get Single play game seed",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.BaseHttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "integer"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.BaseHttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -99,37 +197,27 @@
         }
     },
     "definitions": {
-        "gorm.DeletedAt": {
+        "handler.BaseHttpResponse": {
+            "description": "Default HTTP response object",
             "type": "object",
             "properties": {
-                "time": {
+                "data": {},
+                "error": {
                     "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
                 }
             }
-        },
-        "handler.BaseHttpResponse": {
-            "type": "object"
         },
         "models.Leaderboard": {
             "description": "leaderboard model",
             "type": "object",
             "required": [
+                "score",
+                "seed",
+                "touch_history",
+                "touches",
                 "username"
             ],
             "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "id": {
-                    "type": "integer"
-                },
                 "score": {
                     "type": "integer"
                 },
@@ -142,12 +230,10 @@
                 "touches": {
                     "type": "integer"
                 },
-                "updatedAt": {
-                    "type": "string"
-                },
                 "username": {
                     "type": "string",
-                    "maxLength": 32
+                    "maxLength": 32,
+                    "minLength": 1
                 }
             }
         }
