# server/handler/game.go
@@ -14,9 +14,9 @@ import (
 // @Tags         Game SinglePlay Endpoints
 // @Accept       json
 // @Produce      json
-// @Success      200	{number}	uint32
-// @Failure      500	{object}	echo.HTTPError
-// @Router       /v1/leaderboard [get]
+// @Success      200	{object}	BaseHttpResponse{data=int32}
+// @Failure      500	{object}	BaseHttpResponse{error=string}
+// @Router       /seed [get]
 func GetSinglePlaySeedV1(c echo.Context) BaseResponse {
 	seed := rand.Int31()
 	sess, err := session.Get("session", c)
