# server/models/leaderboard.go
@@ -12,10 +12,10 @@ type Point struct {
 // Leaderboard Information of leaderboard
 // @Description leaderboard model
 type Leaderboard struct {
-	gorm.Model
-	Username     string `json:"username" validate:"required_with_all,max=32"`
-	Score        int    `json:"score" validate:"required;numeric"`
-	Touches      int    `json:"touches" validate:"required;numeric"`
+	gorm.Model   `swaggerignore:"true"`
+	Username     string `json:"username" validate:"required,min=1,max=32"`
+	Score        int    `json:"score" validate:"required,numeric"`
+	Touches      int    `json:"touches" validate:"required,numeric"`
 	TouchHistory string `json:"touch_history" gorm:"type:text" validate:"required,json"`
-	Seed         int32  `json:"seed" validate:"required;numeric"`
+	Seed         int32  `json:"seed" validate:"required,numeric"`
 }
